fix: gap between calendar tiles

--- a/3rd-air-champion-frontend/src/styles/calendarStyle.css
+++ b/3rd-air-champion-frontend/src/styles/calendarStyle.css
@@ -7,7 +7,7 @@
 }
 
 .react-calendar__custom_tile {
-  @apply hover:bg-slate-500 h-[76px] border border-gray-300 grid grid-rows-4;
+  @apply hover:bg-slate-500 h-[100px] sm:h-[76px] border border-gray-300 grid grid-rows-4 mb-1;
 }
 
 .react-calendar__custom_tile_today {
